Change Usage API, Bump version to 1.0.8
